<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4B5CBD"
    tools:context=".PatelActivity2">


    <TextView
        android:id="@+id/BhargavTV3"
        android:layout_width="402dp"
        android:layout_height="264dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007">

    </TextView>

    <EditText
        android:id="@+id/BhargavName"
        android:layout_width="208dp"
        android:layout_height="63dp"
        android:hint="@string/john_wick"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/BhargavCcard"
        android:layout_width="206dp"
        android:layout_height="58dp"
        android:digits="01234 56789"
        android:hint="@string/_0000000000000000"
        android:inputType="number"
        android:maxLength="16"
        app:layout_constraintBottom_toBottomOf="@+id/BhargavMvScreen3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BhargavName"
        app:layout_constraintVertical_bias="0.0">

    </EditText>

    <EditText
        android:id="@+id/BhargavAddress"
        android:layout_width="204dp"
        android:layout_height="60dp"
        android:layout_marginBottom="152dp"
        android:hint="@string/_15_creditview_drive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BhargavCcard">

    </EditText>

    <Spinner
        android:id="@+id/BhargavSpinner"
        android:layout_width="201dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/BhargavMvScreen3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BhargavAddress"
        app:layout_constraintVertical_bias="0.08">

    </Spinner>

    <Button
        android:id="@+id/BhargavMvScreen3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>

