<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4B5CBD"
    tools:context=".PatelActivity">

    <TextView
        android:id="@+id/BhargavTV2"
        android:layout_width="111dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201">

    </TextView>

    <ImageView
        android:id="@+id/BhargavImage2"
        android:layout_width="189dp"
        android:layout_height="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <RadioGroup
        android:id="@+id/BhargavRGroup2"
        android:layout_width="150dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408">

        <TextView
            android:id="@+id/BhargavPType"
            android:layout_width="148dp"
            android:layout_height="43dp"
            android:text="Choose a pizza types" />

        <RadioButton
            android:id="@+id/BhargavPType1"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:text="Margherita">

        </RadioButton>

        <RadioButton
            android:id="@+id/BhargavPType2"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="Pepperoni">

        </RadioButton>

        <RadioButton
            android:id="@+id/BhargavPType3"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="Cheese">

        </RadioButton>

    </RadioGroup>

    <RadioGroup
        android:id="@+id/BhargavRGroup3"
        android:layout_width="222dp"
        android:layout_height="196dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41">

        <TextView
            android:id="@+id/BhargavPSize"
            android:layout_width="148dp"
            android:layout_height="43dp"
            android:text="Choose a pizza Size" />

        <RadioButton
            android:id="@+id/BhargavPSize1"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="Small">

        </RadioButton>

        <RadioButton
            android:id="@+id/BhargavPSize2"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="Medium">

        </RadioButton>

        <RadioButton
            android:id="@+id/BhargavPSize3"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="Large">

        </RadioButton>

    </RadioGroup>

    <TextView
        android:id="@+id/BhargavPToppings"
        android:layout_width="196dp"
        android:layout_height="29dp"
        android:text="Choose your Toppings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BhargavTV2"
        app:layout_constraintVertical_bias="0.471" >

    </TextView>

    <CheckBox
        android:id="@+id/BhargavPToppings4"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_marginBottom="196dp"
        android:text="@string/black_olives"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BhargavPToppings"
        app:layout_constraintVertical_bias="1.0">

    </CheckBox>

    <CheckBox
        android:id="@+id/BhargavPToppings3"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_marginBottom="72dp"
        android:text="@string/extra_cheese"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BhargavPToppings1"
        app:layout_constraintVertical_bias="1.0">

    </CheckBox>

    <CheckBox
        android:id="@+id/BhargavPToppings2"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_marginBottom="132dp"
        android:text="@string/mushrooms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BhargavPToppings5"
        app:layout_constraintVertical_bias="1.0">

    </CheckBox>

    <CheckBox
        android:id="@+id/BhargavPToppings1"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_marginBottom="104dp"
        android:text="@string/jalapenos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BhargavPToppings2"
        app:layout_constraintVertical_bias="0.0">

    </CheckBox>

    <CheckBox
        android:id="@+id/BhargavPToppings5"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_marginBottom="164dp"
        android:text="@string/green_peppers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BhargavPToppings4"
        app:layout_constraintVertical_bias="1.0">

    </CheckBox>

    <Button
        android:id="@+id/BhargavMvScreen2"
        android:layout_width="85dp"
        android:layout_height="52dp"
        android:layout_marginBottom="28dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BhargavPToppings3"
        app:layout_constraintVertical_bias="0.0">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>
